HSEARCH-1558 Cleanup poms from unused system environment variables